--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,3 +9,12 @@
     color: rgb(255, 255, 255);
     background-color: rgb(0, 157, 255);
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item {
+    flex-basis: 12rem;
+}
