--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -16,5 +16,16 @@
 }
 
 .item {
-    flex-basis: 12rem;
+    flex-basis: 15rem;
+}
+
+.card {
+    height: 15rem;
+    border-style: solid;
+    border-color: rgb(197, 197, 197);
+}
+
+.card:hover {
+    box-shadow: 0px 2px 8px 2px rgb(159, 159, 159);
+    transition: box-shadow 0.2s ease-in-out;
 }
