--- a/app/assets/stylesheets/prompts.scss
+++ b/app/assets/stylesheets/prompts.scss
@@ -1,7 +1,7 @@
 .prompt-tile {
     border-radius: 5px;
-    margin: 5px;
+    margin: 6px;
     h1 {
-        font-size: 25px;
+        font-size: 2.85vh;
     }
 }
