--- a/app/assets/stylesheets/prompts.scss
+++ b/app/assets/stylesheets/prompts.scss
@@ -1,7 +1,31 @@
 .prompt-tile {
-    border-radius: 5px;
-    margin: 6px;
+    .card {
+        border-radius: 5px;
+        height: 15rem;
+        border-style: solid;
+        border-color: rgb(197, 197, 197);
+    }
+    .card:hover {
+        box-shadow: 0px 2px 8px 2px rgb(159, 159, 159);
+        transition: box-shadow 0.2s ease-in-out;
+    }
     h1 {
         font-size: 2.85vh;
+    }
+    margin: 6px;
+}
+
+.prompt-show {
+    .card {
+        border-radius: 5px;
+        height: 18rem;
+        margin: 1rem;
+        box-shadow: 0px 2px 8px 2px rgb(159, 159, 159);
+    }
+    h1 {
+        font-size: 3rem;
+    }
+    p {
+        font-size: 2rem;
     }
 }
