--- a/app/assets/stylesheets/responses.scss
+++ b/app/assets/stylesheets/responses.scss
@@ -1,5 +1,33 @@
+.response-index-container {
+    display: flex;
+    flex-flow: row wrap;
+}
 .response-tile {
-    .card {
-        width: 500px;
+    flex-basis: 35rem;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: rgb(197, 197, 197);
+    margin-left: 1rem;
+    margin-top: 10px;
+    margin-right: 1rem;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-right: 20px;
+    padding-bottom: 3px;
+    .response-tile-user {
+        h5 {
+            font-size: 18px;
+            color: rgb(255, 255, 255)
+        }
+        margin: 3px;
+        padding-left: 10px;
+        padding-right: 10px;
+        max-width: min-content;
+        border-radius: 20px;
+        background-color: rgb(0, 157, 255);
+    }
+    p {
+        font-size: 16px;
+        padding-left: 18px;
     }
 }
