--- a/app/assets/stylesheets/responses.scss
+++ b/app/assets/stylesheets/responses.scss
@@ -70,3 +70,28 @@
     border-radius: 20px;
     color: rgb(0, 0, 0);
 }
+
+.new-response {
+    border-radius: 5px;
+    border-style: solid;
+    border-color: rgb(197, 197, 197);
+    margin-left: 1rem;
+    margin-top: 10px;
+    margin-right: 1rem;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-right: 20px;
+    padding-bottom: 3px;
+}
+
+.response-label {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    max-width: max-content;
+    border-radius: 20px;
+    background-color: rgb(0, 157, 255);
+    color: rgb(255, 255, 255)
+}
