--- a/app/assets/stylesheets/responses.scss
+++ b/app/assets/stylesheets/responses.scss
@@ -83,6 +83,9 @@
     padding-top: 5px;
     padding-right: 20px;
     padding-bottom: 3px;
+    textarea {
+        border-radius: 5px;
+    }
 }
 
 .response-label {
