--- a/app/assets/stylesheets/responses.scss
+++ b/app/assets/stylesheets/responses.scss
@@ -26,75 +26,29 @@
         border-radius: 20px;
         background-color: rgb(0, 157, 255);
     }
+    .response-section {
+        font-size: 12px;
+        margin: 3px;
+        padding-left: 8px;
+        padding-right: 8px;
+        max-width: min-content;
+        border-radius: 20px;
+        color: rgb(255, 255, 255);
+    }
     p {
         font-size: 16px;
         padding-left: 18px;
     }
 }
 
-.option-buttons-row {
-    display: flex;
+.Beginning {
+    background-color: rgb(15, 189, 47);
 }
 
-.option-button {
-    flex-basis: auto;
-    margin-left: 20px;
+.Middle {
+    background-color: rgb(140, 19, 221);
 }
 
-.option-button:hover {
-    cursor: pointer;
-    box-shadow: 0px 2px 6px 2px rgb(128, 127, 127);
-    transition: box-shadow 0.1s ease-in-out;
-}
-
-.option-unselected {
-    padding-left: 10px;
-    padding-top: 3px;
-    padding-right: 10px;
-    padding-bottom: 3px;
-    max-width: max-content;
-    border-radius: 20px;
-    background-color: rgb(0, 157, 255);
-    color: rgb(255, 255, 255);
-}
-
-.option-selected {
-    border: 1px solid rgb(0, 157, 255);
-    box-shadow: 0px 1px 2px 1px rgb(128, 127, 127);
-    padding-left: 10px;
-    padding-top: 3px;
-    padding-right: 10px;
-    padding-bottom: 3px;
-    max-width: max-content;
-    background-color: rgb(255, 255, 255);
-    border-radius: 20px;
-    color: rgb(0, 0, 0);
-}
-
-.new-response {
-    border-radius: 5px;
-    border-style: solid;
-    border-color: rgb(197, 197, 197);
-    margin-left: 1rem;
-    margin-top: 10px;
-    margin-right: 1rem;
-    margin-bottom: 10px;
-    padding-left: 20px;
-    padding-top: 5px;
-    padding-right: 20px;
-    padding-bottom: 3px;
-    textarea {
-        border-radius: 5px;
-    }
-}
-
-.response-label {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    max-width: max-content;
-    border-radius: 20px;
-    background-color: rgb(0, 157, 255);
-    color: rgb(255, 255, 255)
+.End {
+    background-color: rgb(16, 46, 182);
 }
