Update and Destroy Response Actions Finished!

--- a/app/assets/stylesheets/prompts.scss
+++ b/app/assets/stylesheets/prompts.scss
@@ -1,10 +1,10 @@
 .prompt-index-container {
-    display: flex;
-    flex-flow: row wrap;
+    // display: flex;
+    // flex-flow: row wrap;
 }
 
 .prompt-index-tile {
-    flex-basis: 15rem;
+    // flex-basis: 15rem;
     .card {
         border-radius: 5px;
         border-style: solid;
