--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="sign-up-field">
-        <%= f.label :username %><br />
+        <%= f.label :username %>
         <%= f.text_field :username, autofocus: true, autocomplete: "username"  %>
       </div>
 
       <div class="sign-up-field">
-        <%= f.label :email %><br />
+        <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
@@ -18,13 +18,18 @@
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
+        <% end %>
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
 
       <div class="sign-up-field">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+
+      <div class="sign-up-field">
+        <%= f.label :profile_pic %>
+        <%= f.file_field :profile_pic %>
       </div>
 
       <div class="action-buttons">
