--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,9 +1,30 @@
 .user-tile {
+    margin-top: 5px;
+    margin-right: 5px;
     border-style: solid;
     border-color: black;
     border-radius: 3px;
-    width: auto;
-    height: auto;
-    margin-top: 15px;
-    margin-right: 15px;
+    h1 {
+        margin: auto;
+        font-family: 'Courier New', Courier, monospace;
+        text-align: center;
+    }
+    height: 30rem;
+}
+
+.user-profile-pic {
+    margin-top: 5px;
+    img {
+        margin: auto;
+        display: block;
+        width: 400px;
+        height: 400px;
+        object-fit: cover;
+        object-position: top;
+        border-radius: 50%;
+        border-color: rgb(0, 0, 0);
+        border-style: solid;
+        border-width: 3px;
+        box-shadow: 0px 2px 8px 2px rgb(159, 159, 159);
+    }
 }
