--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,7 +9,7 @@
         font-family: 'Courier New', Courier, monospace;
         text-align: center;
     }
-    height: 30rem;
+    max-height: 32rem;
 }
 
 .user-profile-pic {
