--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,15 @@
 <body>
   
   <nav class="top-bar">
-    <h1><a href="/">WorksInProgress</a></h1>
-
+    <h1><a href="/">
+      <img src="https://works-in-progress-production.s3.amazonaws.com/uploads/works-in-progress-low-resolution-logo-color-on-transparent-background.png">
+    </a></h1>
+    <section class="top-bar-section">
+      <div class="left">
+        <a class="button" href="/">Home</a>
+        <a class="button" href="/prompts">Pormpts</a>
+      </div>
+    </section>
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
