--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div className="sign-up-page">
+<div class="sign-up-page">
   <h2>Sign up</h2>
-  <div className="sign-up-form">
+  <div class="sign-up-form">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
