--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,18 +15,18 @@
     <section class="top-bar-section">
       <div class="left">
         <a class="button" href="/">Home</a>
-        <a class="button" href="/prompts">Pormpts</a>
+        <a class="button" href="/prompts">Prompts</a>
       </div>
     </section>
     <section class="top-bar-section">
-      <ul class="right">
+      <div class="right">
         <%- if current_user -%>
-          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+          <p class="devise-button out"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-          <li><%= link_to 'Sign In', new_user_session_path %></li>
+          <p class="devise-button up"><%= link_to 'Sign Up', new_user_registration_path %></li>
+          <p class="devise-button in"><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
-      </ul>
+      </div>
     </section>
   </nav>
 
